fix filter() - filteredJokes not showing immediately

--- a/angular-jokes/src/app/jokes/jokes.component.css
+++ b/angular-jokes/src/app/jokes/jokes.component.css
@@ -1,5 +1,5 @@
 
-div {
+.listJokes {
   margin: 20px;
   padding: 0px 10px 0px 10px;
   border: 2px solid #4299e1;
